Hide overflow in clear - caused alignment issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,7 +53,7 @@
 
 .clear, .clear-10, .clear-15 {
   clear: both;
-  overflow: hidden; /* Précaution pour IE 7 */
+  /* overflow: hidden; Précaution pour IE 7 */
 }
 .clear-10 {
   margin-bottom: 10px
